production-cluster/cluster-manifests/global/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ec2-apps
---
apiVersion: v1
kind: Namespace
metadata:
  name: fargate-apps
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: infra
