production-cluster/cluster-manifests/global/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: ec2-apps
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
